--- a/site/app/config/routing.yml
+++ b/site/app/config/routing.yml
@@ -1,3 +1,5 @@
-app:
-    resource: "@AppBundle/Controller/"
+bp_core:
+    resource: "@BpCoreBundle/Controller/"
     type:     annotation
+    prefix:   /
+
