--- a/site/app/config/routing.yml
+++ b/site/app/config/routing.yml
@@ -1,3 +1,13 @@
+bp_payment:
+    resource: "@BpPaymentBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+bp_product:
+    resource: "@BpProductBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 bp_profile:
     resource: "@BpProfileBundle/Controller/"
     type:     annotation
