add product/order/cart logic

--- a/site/app/config/routing.yml
+++ b/site/app/config/routing.yml
@@ -1,3 +1,8 @@
+bp_cart:
+    resource: "@BpCartBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 bp_payment:
     resource: "@BpPaymentBundle/Controller/"
     type:     annotation
