--- a/site/src/Bp/CartBundle/Resources/config/services.yml
+++ b/site/src/Bp/CartBundle/Resources/config/services.yml
@@ -13,10 +13,15 @@ services:
 
     payment.bridge:
         class: Bp\CartBundle\Services\PaymentBridge
+        arguments: [@cart]
 
     payment.event.listener:
         class:     Bp\CartBundle\EventListener\Payment
         arguments: [@doctrine.orm.entity_manager, @mailer]
+        calls:
+          - [ setContractService, [@contract] ]
+          - [ setUser, [@=service('security.context').getToken().getUser()] ]
+          - [ setPaymentBridge, [@payment.bridge] ]
         tags:
             - { name: kernel.event_listener, event: payment.order.done, method: onPaymentOrderDone }
             - { name: kernel.event_listener, event: payment.order.created, method: onPaymentOrderCreated }
