--- a/site/app/config/config.yml
+++ b/site/app/config/config.yml
@@ -73,6 +73,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    port:      465
+    encryption: ssl
+    auth_mode:  login
 
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
