--- a/site/app/config/routing.yml
+++ b/site/app/config/routing.yml
@@ -37,3 +37,6 @@ stripe_payment_routes:
 
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
